# Udacity

./: .gitignore  README.md
AI for Healthcare Nanodegree/Exercise - 3D Volume MPR/: dicom_mpr.py
AI for Healthcare Nanodegree/Exercise - Algorithmic Limitations/: Exercise.ipynb  labels_and_performance.csv
AI for Healthcare Nanodegree/Exercise - Analyze Dataset/: Analyze_Dataset_Exercise.ipynb  Compare_Demographics_Exercise.ipynb
AI for Healthcare Nanodegree/Exercise - Apply Machine Learning/: Exercise.ipynb  probabilities.csv
AI for Healthcare Nanodegree/Exercise - Clinical Applications/: Exercise.ipynb  mammo_left.pgm  mammo_right.pgm
AI for Healthcare Nanodegree/Exercise - Common EHR Model Evaluation Metrics/: Lesson_Modeling_Exercise_1_Starter_Code.ipynb
AI for Healthcare Nanodegree/Exercise - Creating Ground Truth with Slicer/: README.md
AI for Healthcare Nanodegree/Exercise - Data Splitting/: Lesson_EHR_DT_FE_Exercise_2_Starter_Code.ipynb
AI for Healthcare Nanodegree/Exercise - Demographic Bias Analysis/: Lesson_Modeling_Exercise_2_Starter_Code.ipynb
AI for Healthcare Nanodegree/Exercise - Diagnosis Code Grouping/: ICD-10-CM-Table 1.csv  Lesson_Code Sets_Exercise_1_Starter_Code.ipynb
AI for Healthcare Nanodegree/Exercise - Evaluating Your Model/: Exercise.ipynb  (+1 more)
C++ Nanodegree/Project - Memory Management Chatbot/: CMakeLists.txt  README.md
C++ Nanodegree/Project - Memory Management Chatbot/src/: answergraph.txt  chatbot.cpp  chatbot.h  chatgui.cpp  chatgui.h  chatlogic.cpp  chatlogic.h  graphedge.cpp  graphedge.h  graphnode.cpp  graphnode.h
(+2512 files in other folders)
